[package]
name = "toolbox_online"
version = "0.1.0"
authors = ["MCMrARM <mcmrarm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-rt = "1.0"
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
lazy_static = "1.4"
rand = "0.7"
hyper = "0.13"
hyper-rustls = "0.19"
yup-oauth2 = "4.0"
futures = "0.3"
log = "0.4"
env_logger = "0.7"
reqwest = { version = "0.10", features = ["json"] }
percent-encoding = "2.1"
derive_more = "0.99"
chrono = "0.4"